unpackaged/main/default/objects/MaintenanceAsset/MaintenanceAsset.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>