unpackaged/main/default/objects/MaintenanceAsset/fields/Calibration_Plan_Maintenance_Asset__c.field-meta.xml
<CustomField>
    <fullName>Calibration_Plan_Maintenance_Asset__c</fullName>
    <formula>MaintenancePlan.Calibration_Plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calibration Plan Maintenance Asset</label>
    <type>Checkbox</type>
</CustomField>