unpackaged/main/default/objects/MaintenanceAsset/fields/Maintenance_Plan_Title__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Plan_Title__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; MaintenancePlanId,  MaintenancePlan.MaintenancePlanTitle)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Plan Title</label>
    <type>Text</type>
</CustomField>