unpackaged/main/default/objects/MaintenanceAsset/fields/Projected_WO_Cost_Next_180_Days__c.field-meta.xml
<CustomField>
    <fullName>Projected_WO_Cost_Next_180_Days__c</fullName>
    <formula>Work_Orders_in_the_Next_180_Days__c *  Work_Order_Cost_EstimateMA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected WO Cost: Next 180 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>