unpackaged/main/default/objects/MaintenanceAsset/fields/Proving_Plan_Maintenance_Asset__c.field-meta.xml
<CustomField>
    <fullName>Proving_Plan_Maintenance_Asset__c</fullName>
    <formula>MaintenancePlan.Proving_Plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proving Plan Maintenance Asset</label>
    <type>Checkbox</type>
</CustomField>