unpackaged/main/default/objects/MaintenanceAsset/fields/Well_Stop__c.field-meta.xml
<CustomField>
    <fullName>Well_Stop__c</fullName>
    <description>This is the Order to Schedule each Well Stop for Edwards wells</description>
    <label>Well Stop Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>