unpackaged/main/default/objects/MaintenanceAsset/fields/Work_Order_Cost_EstimateMA__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Cost_EstimateMA__c</fullName>
    <formula>MaintenancePlan.Estimated_Work_Order_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Cost Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>