unpackaged/main/default/objects/MaintenanceAsset/fields/Work_Orders_in_the_Next_180_Days__c.field-meta.xml
<CustomField>
    <fullName>Work_Orders_in_the_Next_180_Days__c</fullName>
    <formula>IF( ISPICKVAL( MaintenancePlan.FrequencyType, &#39;Days&#39;), 180 / MaintenancePlan.Frequency,
IF( ISPICKVAL( MaintenancePlan.FrequencyType, &#39;Weeks&#39;), ( 1 / (MaintenancePlan.Frequency * 7)) * 180,
IF( ISPICKVAL( MaintenancePlan.FrequencyType, &#39;Months&#39;), ( 1 / (MaintenancePlan.Frequency * 30)) * 180,
IF(
AND(
ISPICKVAL(MaintenancePlan.FrequencyType, &#39;Years&#39;),
TODAY() &lt;= NextSuggestedMaintenanceDate, NextSuggestedMaintenanceDate &lt;= (TODAY()+180)
), 1,
0
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Orders in the Next 180 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>