unpackaged/main/default/objects/MaintenanceAsset/fields/Work_Orders_in_the_Next_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Work_Orders_in_the_Next_30_Days__c</fullName>
    <formula>IF( ISPICKVAL( MaintenancePlan.FrequencyType, &#39;Days&#39;), 30 /  MaintenancePlan.Frequency ,
IF( ISPICKVAL( MaintenancePlan.FrequencyType, &#39;Weeks&#39;), (1 / (MaintenancePlan.Frequency * 7)) * 30,
IF( 
AND(
ISPICKVAL( MaintenancePlan.FrequencyType, &#39;Months&#39;), 
TODAY() &lt;= NextSuggestedMaintenanceDate, NextSuggestedMaintenanceDate &lt;= (TODAY()+30) ), 1,
IF( 
AND( 
ISPICKVAL(MaintenancePlan.FrequencyType, &#39;Years&#39;),  
TODAY() &lt;= NextSuggestedMaintenanceDate, NextSuggestedMaintenanceDate &lt;= (TODAY()+30)
), 1,
0
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Orders in the Next 30 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>